ignore ds_store file

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 
 uploads/2016/09/appartment-1-100x100.jpg
+
+themes/.DS_Store
+
+themes/optimus-theme/.DS_Store
+
+themes/optimus-theme/images/.DS_Store
